--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -24,11 +24,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 0;
-  margin-right: 0;
-  @media (min-width: $medium-width) {
-    width: 100%;
-  }
+  margin-left: 25px;
+  margin-right: 25px;
+  height: 51px;
+
 }
 
 .companions__pages{
@@ -36,21 +35,24 @@
 
   @media (min-width: $medium-width) {
     display: flex;
+    padding-left: 48px;
   }
 }
 
 .filter__continents-list{
   display: none;
+  list-style-type: none;
 
   @media (min-width: $medium-width) {
     display: flex;
-    list-style-type: none;
   }
 }
 
 .companions__navigation{
   margin-top: 18px;
   background-color: #ffffff;
+  border-radius: 20px;
+
   @media (min-width: $medium-width) {
     display: flex;
     margin-top: 60px;
@@ -65,6 +67,7 @@
 
 .companions__card{
   width: 100%;
+  @include text(15px, normal, 16px, $special-grey);
 
   @media (min-width: $medium-width) {
    flex-direction: column;
@@ -94,7 +97,7 @@
 
 .companions__flags{
   order: 3;
-  margin-top: 20px;
+  margin-top: 19px;
 
   @media (min-width: $medium-width) {
     display: flex;
@@ -113,11 +116,14 @@
 
 .companions__additional-info{
   order: 4;
+  margin-top: 15px;
+
   @media (min-width: $medium-width) {
     flex-direction: column;
+    align-items: center;
     margin-left: auto;
-    margin-top: -130px;
-    margin-bottom: 80px;
+    margin-top: -180px;
+    margin-bottom: 40px;
     order: 2;
   }
 
@@ -131,7 +137,7 @@
 
 .companiouns__want-visit{
   order: 1;
-  margin-top: 20px;
+  margin-top: 16px;
   // width: 100%;
 
   @media (min-width: $medium-width) {
@@ -154,6 +160,17 @@
   //   // margin: 0 1rem;
   //   transform: translateY(-0.2rem);
   // }
+
+  .companiouns__want-visit:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    border-top: 1px solid black;
+    background: black;
+    width: 100%;
+    transform: translateY(-50%);
+  }
 }
 
 .companions__buttons{
@@ -205,6 +222,7 @@
 
   @media (min-width: $medium-width) {
     margin-top: 20px;
+    max-width: 226px;
   }
 }
 
@@ -223,9 +241,11 @@
 
 .companions__card-list{
   flex-direction: row;
+  margin-top: 18px;
 
   @media (min-width: $medium-width) {
     flex-direction: column;
+    margin-top: 0;
   }
 
   @media (min-width: $large-width) {
@@ -252,6 +272,10 @@
 
 
 .companions__button{
+  @media (min-width: $medium-width) {
+    margin-left: 27px;
+  }
+
   &:hover{
     background-color: transparent;
   }
@@ -501,4 +525,137 @@
 
 .companions__walk--visible-4{
   display: none;
+}
+
+.companions__page-buttons{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 63px;
+  padding-right: 63px;
+
+  @media (max-width: $medium-max-width) {
+    width: 100%;
+  }
+
+  @media (min-width: $medium-width) {
+    justify-content: flex-end;
+  }
+}
+
+.companions__line{
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  stroke: #EDEFF6;
+
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.companions__level{
+  @media (min-width: $medium-width) {
+    margin-top: 10px;
+  }
+}
+
+.companions__level-icon{
+  width: 46px;
+  height: 45px;
+  fill: none;
+
+  @media (max-width: $small-max-width) {
+    margin-top: 10px;
+  }
+}
+
+.companions__level-icon--small{
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.companions__level-icon--medium{
+  display: none;
+  @media (min-width: $medium-width) {
+    display: block;
+  }
+}
+
+.companions__user-level-icon{
+  stroke: #FF8D30;
+  stroke-width: 3;
+  stroke-linecap: round;
+}
+
+.companions__level-number{
+  fill: $basic-blue-light;
+  @include text(24px, bold, 24px);
+}
+
+.companions__level-line{
+  opacity: 0.1;
+  stroke: #000000;
+}
+
+
+.companions__level-text{
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.companions__level-icon-text{
+  @include text(14px, normal, 14px);
+  opacity: 0.4;
+  fill: #000000;
+}
+
+.companions__call{
+  height: 40px;
+  @include text(17px, bold, 17px, $basic-blue);
+  text-transform: uppercase;
+
+  @media (max-width: $small-max-width) {
+    width: 100%;
+    margin-top: 21px;
+  }
+
+  @media (min-width: $medium-width) {
+    min-width: 150px;
+    height: 50px;
+  }
+}
+
+.companions__inline-card-item{
+  margin-right: 10px;
+
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
+}
+
+.companions__button-like{
+  width: 31px;
+  height: 31px;
+
+  @media (min-width: $medium-width) {
+   width: 50px;
+   height: 50px;
+  }
+}
+
+.companions__like{
+  padding: 0;
+  width: 12px;
+  height: 12px;
+
+  @media (min-width: $medium-width) {
+    width: 20px;
+    height: 18px;
+  }
+  // height: 50px;
+  // width: 50px;
 }
