--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,9 +7,12 @@
 @import "blocks/alphabet";
 @import "blocks/icon.scss";
 @import "blocks/button.scss";
+@import "blocks/checkbox.scss";
 @import "blocks/country-list.scss";
+@import "blocks/link.scss";
 @import "blocks/select.scss";
 @import "blocks/tooltip.scss";
+@import "blocks/transport-list.scss";
 @import "blocks/container.scss";
 @import "blocks/icon-list.scss";
 @import "blocks/about.scss";
@@ -31,7 +34,6 @@
 @import "blocks/country-description-list.scss";
 @import "blocks/dataset.scss";
 @import "blocks/details-list.scss";
-@import "blocks/dropdown-multiple-select.scss";
 @import "blocks/feedback.scss";
 @import "blocks/filter.scss";
 @import "blocks/flag.scss";
@@ -56,7 +58,6 @@
 @import "blocks/slider-toggles.scss";
 @import "blocks/social-list.scss";
 @import "blocks/step-list.scss";
-@import "blocks/transport-list.scss";
 @import "blocks/user-info.scss";
 @import "blocks/user-list.scss";
 @import "blocks/user-plans.scss";
