--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -151,15 +151,22 @@
     display: none;
   }
 
-  // &::before,
-  // &::after {
-  //   display: inline-block;
-  //   content: "";
-  //   border-top: .1rem solid black;
-  //    width: 30%;
-  //   // margin: 0 1rem;
-  //   transform: translateY(-0.2rem);
-  // }
+  &::before{
+    display: inline-block;
+    content: "";
+    border-top: 1px solid #EDEFF6;
+     width: 5%;
+    // margin: 0 1rem;
+    transform: translateY(-0.2rem);
+  }
+  &::after {
+    display: inline-block;
+    content: "";
+    border-top: 1px solid #EDEFF6;
+     width: 50%;
+    // margin: 0 1rem;
+    transform: translateY(-0.2rem);
+  }
 
   .companiouns__want-visit:before {
     content: '';
