--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -162,6 +162,10 @@
     height: 140px;
     width: 550px;
   }
+
+  @media (min-width: $large-width) {
+    width: 520px;
+  }
 }
 
 .countries__item{
