--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -98,7 +98,7 @@
 
 .companions__flags{
   order: 3;
-  margin-top: 50px;
+  margin-top: 19px;
 
   @media (min-width: $medium-width) {
     display: flex;
@@ -137,12 +137,15 @@
 }
 
 .companiouns__want-visit{
-  position: absolute;
   order: 1;
   margin-top: 16px;
-  top: 130px;
-  left: 0;
-  right: 0;
+  background-color: #ffffff;
+  z-index: 1;
+  padding-left: 12px;
+  width: 110px;
+  // top: 130px;
+  // left: 0;
+  // right: 0;
   // min-width: 110px;
   // width: 100%;
 
@@ -156,38 +159,37 @@
   @media (min-width: $large-width) {
     display: none;
   }
+}
 
-  &::before{
-    display: inline-block;
-    content: "";
-    border-top: 1px solid #EDEFF6;
-     width: 5%;
-    // margin: 0 1rem;
-    transform: translateY(-0.2rem);
-  }
-  &::after {
-    display: inline-block;
-    content: "";
-    border-top: 1px solid #EDEFF6;
-     width: 57%;
-    // margin: 0 1rem;
-    transform: translateY(-0.2rem);
+.companions__want-visit-line {
+  position: absolute;
+  top: 158px;
+  left: 0;
+  right: 0;
+
+  @media (min-width: $medium-width) {
+    top: 258px;
+    left: -225px;
   }
 
-  .companiouns__want-visit:before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    border-top: 1px solid black;
-    background: black;
-    width: 100%;
-    transform: translateY(-50%);
+  @media (min-width: $large-width) {
+    display: none;
   }
 }
 
-.companiouns__want-visit-line{
+.companions__transport-line {
+  position: absolute;
+  top: 300px;
+  left: 0;
+  right: 0;
 
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+
+  @media (min-width: $large-width) {
+    display: none;
+  }
 }
 
 .companions__buttons{
@@ -561,7 +563,7 @@
   }
 }
 
-.companions__line{
+.companions__vertical-line{
   position: absolute;
   top: -16px;
   left: 50%;
@@ -619,6 +621,11 @@
 
 
 .companions__level-text{
+  background-color: #ffffff;
+  z-index: 1;
+  padding-left: 14px;
+  padding-right: 10px;
+
   @media (min-width: $medium-width) {
     display: none;
   }
