--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -8,6 +8,10 @@
   justify-content: space-between;
 }
 
+.page-header--light-theme{
+  background-color: #182044;
+}
+
 .page-header--border-radius{
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
