--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,6 +3,7 @@
   background-image: url(../../img/globe-back-mobile.png);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: 0px -235px;
 
   @media (min-width: $medium-width) {
     background-image: url(../../img/globe-back-tablet.png);
