--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -32,7 +32,7 @@
   display: none;
 
   @media (min-width: $medium-width) {
-    display: block;
+    display: flex;
     border-radius: 20px;
     width: 276px;
     height: 80px;
