--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -99,6 +99,14 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  &:hover{
+    opacity: 0.6;
+  }
+
+  &:active, &:focus{
+    opacity: 0.3;
+  }
 }
 
 .choose-companion__search-params{
@@ -187,7 +195,7 @@
   height: 2px;
   background: $basic-blue-light;
   width: 100%;
-  background: linear-gradient(to right, rgba(29,46,91, 0.2) 5%, $basic-blue-light 95%);
+  background: linear-gradient(to right, rgba(29,46,91, 0.2) 25%, $basic-blue-light 25%);
   // background: linear-gradient(to right,
   // red 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80%);
 
