--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -15,15 +15,31 @@
 }
 
 .profile__list{
-  margin-top: 46px;
+  margin-top: -80px;
+  padding-top: 126px;
+  background-image: url(../../img/rates-large.png);
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: 100px 100px;
+
   @media (min-width: $medium-width) {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: -100px;
+    padding-bottom: 100px;
+    background-position: bottom right 20px;
   }
 
   @media (min-width: $large-width) {
     width: 75%;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    padding-right: 230px;
+    background-size: 198px 198px;
+    background-position: right ;
   }
 }
 
