--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -1,12 +1,18 @@
 
 .users{
-padding-bottom: 25px;
+  padding-bottom: 25px;
+  position: relative;
+
+  @media (min-width: $large-width) {
+    min-height: 852px;
+  }
 }
 
 .users__header{
   // margin-left: 25px;
   @media (min-width: $large-width) {
     display: flex;
+    justify-content: space-between;
   }
 }
 
@@ -17,6 +23,11 @@ padding-bottom: 25px;
   @media (min-width: $medium-width) {
     font-size: 45px;
     line-height: 45px;
+  }
+
+  @media (min-width: $large-width) {
+    z-index: 1;
+    margin-top: 130px;
   }
 }
 
@@ -34,6 +45,10 @@ padding-bottom: 25px;
     font-size: 28px;
     line-height: 34px;
     font-weight: 300;
+  }
+
+  @media (min-width: $large-width) {
+    z-index: 1;
   }
 }
 
@@ -69,6 +84,75 @@ padding-bottom: 25px;
 
 .users__background-images{
   display: flex;
+  justify-content: space-between;
+  margin-bottom: -75px;
+
+  @media (min-width: $large-width) {
+    position: absolute;
+    z-index: 0;
+    flex-wrap: wrap;
+    margin-top: 70px;
+    left: 60px;
+  }
+}
+
+.users__background-image-1{
+  background-image: url(../../img/back-medium.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: -25px;
+  width: 113px;
+  height: 132px;
+
+  @media (min-width: $medium-width) {
+    width: 212px;
+    height: 212px;
+  }
+
+  @media (min-width: $large-width) {
+  }
+}
+
+.users__background-image-2{
+  background-image: url(../../img/smolov-back-desktop.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 143px;
+  height: 143px;
+
+  @media (min-width: $medium-width) {
+    position: absolute;
+    left: 40px;
+    top: 360px;
+  }
+
+  @media (min-width: $large-width) {
+    top: 134px;
+    left: 547px;
+  }
+}
+
+.users__background-image-3{
+  position: absolute;
+  top: 235px;
+  background-image: url(../../img/rogovaya-back-desktop.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 64px;
+  height: 71px;
+  left: 0;
+
+  @media (min-width: $medium-width) {
+    position: static;
+    width: 285px;
+    height: 285px;
+  }
+
+  @media (min-width: $large-width) {
+    position: absolute;
+    top: 386px;
+    left: 190px;
+  }
 }
 
 .users__background{
@@ -86,6 +170,7 @@ padding-bottom: 25px;
   }
 
   @media (min-width: $large-width) {
+    max-width: 285px;
     &:not(:last-child){
       margin-right: 60px;
     }
@@ -107,7 +192,7 @@ padding-bottom: 25px;
   width: 100%;
   height: 100%;
   @media (min-width: $medium-width) {
-    max-height: 365px;
+    height: 325px;
   }
 
   @media (min-width: $large-width) {
