--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/button.scss";
 @import "blocks/checkbox.scss";
 @import "blocks/country-list.scss";
+@import "blocks/line.scss";
 @import "blocks/link.scss";
 @import "blocks/select.scss";
 @import "blocks/tooltip.scss";
