--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,30 +1,58 @@
 .about{
   margin-top: 72px;
-  background-image: url(../../img/about-mobile.png);
-  background-size: contain;
+  background-image: url(../../img/about-mobile.png),url(../../img/back-medium.png);
+  background-size: contain, 113px 132px;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: right center, top left;
+  border-radius: 20px;
+  // background-image: url(../../img/back-medium.png);
+  // background-repeat: no-repeat;
+  // background-size: cover;
 
   @media (min-width: $medium-width) {
-    margin-top: 137px;
-    background-position: center right;
+    margin-top: 96px;
+    padding-top: 41px;
+    // padding-top: 137px;
+    background-image: url(../../img/about-tablet.png),url(../../img/back-medium.png);
+    background-size: 376px 510px, 100% 212px;
+    background-position: right top 45px, top left 40px;
   }
 
 
   @media (min-width: $large-width) {
-    margin-top: 42px;
-    background-position: center right;
+    margin-top: 0;
+    padding-top: 42px;
+    background-image: url(../../img/about-desctop.png),url(../../img/back-medium.png);
+    background-size: 630px 735px, 212px 212px;
+    background-position: right top, top left 40px;
   }
 }
 
 .about__container{
-  margin-left: 49px;
-  margin-bottom: 82px;
+  margin-left: 29px;
+  padding-bottom: 82px;
+
+  @media (min-width: $medium-width) {
+    margin-left: 34px;
+    padding-bottom: 89px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: 70px;
+    padding-bottom: 163px;
+  }
 }
 
 .about__slogan{
+  padding-top: 33px;
+
   @media (min-width: $medium-width) {
     @include text(45px, bold, 45px, $special-orange);
+    padding-top: 41px;
+  }
+
+  @media (min-width: $medium-width) {
+    padding-top: 42px;
   }
 }
 
@@ -33,25 +61,33 @@
 
   @media (min-width: $medium-width) {
     display: flex;
+    margin-top: 52px;
     border-radius: 20px;
     width: 276px;
     height: 80px;
   }
+
+  @media (min-width: $large-width) {
+    margin-top: 85px;
+  }
 }
 
 .about__description{
-  margin-bottom: 25px;
   width: 210px;
   font-weight: 300;
+  margin-top: 19px;
 
   @media (min-width: $medium-width) {
     width: 310px;
     font-size: 28px;
     line-height: 33px;
+    margin-top: 40px;
+    margin-bottom: 25px;
   }
 
   @media (min-width: $large-width) {
     width: 620px;
+    margin-top: 57px;
   }
 }
 
@@ -60,6 +96,11 @@
 
   @media (min-width: $medium-width) {
     font-size: 21px;
+    margin-top: 31px;
     line-height: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 38px;
   }
 }
