--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -18,11 +18,14 @@
 }
 
 .button--authorization{
-  padding: 10px 15px 10px 15px;
+  width: 190px;
+  height: 40px;
   text-transform: uppercase;
+  border-radius: 25px;
 
-  @media (min-width: $large-width) {
-    padding: 21px 21px 21px 21px;
+  @media (min-width: $medium-width) {
+    width: 188px;
+    height: 50px;
   }
 }
 
