--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,30 +2,41 @@
   padding-top: 33px;
   background-color: $basic-yellow;
   position: relative;
+
+  @media (min-width: $medium-width) {
+    padding-top: 48px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-top: 55px;
+  }
 }
 
 .contacts__get-direction{
   display: flex;
   flex-direction: column;
-  padding-bottom: 57px;
+  padding-bottom: 35px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 
   @media (min-width: $medium-width) {
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
+    padding-bottom: 84px;
   }
 
   @media (min-width: $large-width) {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    padding-bottom: 56px;
   }
 }
 
 .contacts__addres{
   color: $basic-blue-light;
   line-height: 22px;
+  margin-left: 26px;
 
   @media (min-width: $medium-width) {
     font-size: 28px;
@@ -33,12 +44,23 @@
   }
 }
 
+.contacts__list{
+  @media (min-width: $medium-width) {
+    margin-left: 35px;
+    margin-right: 35px;
+  }
+}
+
 .contacts__map-icon{
   background-color: $blue;
   fill: $basic-yellow;
+  width: 20px;
+  height: 20px;
+
   @media (min-width: $medium-width) {
     width: 23px;
-    height: 21px;
+    height: 31px;
+    padding: 19px 23px 19px 23px;
   }
 }
 
@@ -78,10 +100,13 @@
   position: absolute;
   top: 45%;
   left: 45%;
-  @media (min-width: $medium-width) and(max-width:$medium-max-width) {
-    display: none;
+  @media (min-width: $medium-width){
+    top: 64%;
   }
 
+  @media (min-width: $large-width){
+    top: 58%;
+  }
 }
 
 .contacts__build-way{
@@ -89,23 +114,32 @@
   justify-content: space-between;
   height: 62px;
   width: 100%;
-  border: 3px solid #192144;
+  border: 3px solid $dark-blue;
   box-sizing: border-box;
   border-radius: 10px;
+  margin-top: 32px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 44px;
+    margin-left: 35px;
+    margin-right: 35px;
+    width: auto;
+  }
 
   @media (min-width: $large-width) {
+    margin-top: 0;
     width: 324px;
   }
 
   &:hover{
-    background: #192144;
+    background: $dark-blue;
     .contacts__wat-text{
       color: #ffffff;
     }
   }
 
   &:active, &:focus{
-    background: #192144;
+    background: $dark-blue;
     .contacts__wat-text{
       color: #ffffff;
       opacity: 0.3;
