--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,14 +1,15 @@
 .feedback{
   padding-top: 72px;
-  padding-bottom: 45px;
+  padding-bottom: 29px;
 
   @media (min-width: $medium-width) {
-    padding-bottom: 75px;
+    padding-top: 76px;
+    padding-bottom: 60px;
   }
 
   @media (min-width: $large-width) {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 109px;
+    padding-bottom: 104px;
   }
 }
 
@@ -20,22 +21,46 @@
 }
 
 .feedback__authorize{
-  font-size: 28px;
-  line-height: 32px;
+  @include text(16px, 300, 22px);
+  margin-top: 19px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 59px;
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
 
 .feedback__list{
   display: flex;
   flex-direction: column;
+  margin-top: 17px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 40px;
+  }
+
   @media (min-width: $large-width) {
     flex-direction: row;
-    justify-content: center;
+    margin-top: 43px;
+    margin-left: 226px;
   }
 }
 
 .feedback__header{
   margin-left: 30px;
+  margin-right: 30px;
   text-align: center;
+
+  @media (min-width: $medium-width) {
+    margin-left: 35px;
+    margin-right: 35px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-left: 343px;
+    margin-right: 322px;
+  }
 }
 
 .feedback__authorisation-link{
@@ -103,8 +128,10 @@
   @include text(16px, 300, 22px, #FFFFFF);
   letter-spacing: 0.01em;
   text-align: center;
+  margin-top: 29px;
 
   @media (min-width: $medium-width) {
+    margin-top: 60px;
     font-size: 28px;
     line-height: 30px;
   }
@@ -140,5 +167,21 @@
 .feedback__contact{
   @media (min-width: $large-width) {
     margin-right: 110px;
+  }
+}
+
+.feedback__icon{
+  width: 16px;
+  height: 15px;
+
+  @media (min-width: $medium-width) {
+    width: 23px;
+    height: 22px;
+  }
+
+  @media (min-width: $large-width) {
+    width: 32px;
+    height: 30px;
+    padding: 30px;
   }
 }
