--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  width: 100%;
+  left: 0;
+  right: 0;
 
   @media (min-width: $medium-width) {
     align-items: flex-start;
@@ -13,7 +14,7 @@
 }
 
 .main-menu__container{
-  width: 75%;
+  // width: 75%;
 }
 
 .main-menu--opened{
