--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -31,6 +31,13 @@
 
 .menu__close-icon{
   fill: #CCCCCC;
+  width: 14px;
+  height: 14px;
+
+  @media (min-width: $medium-width) {
+    width: 22px;
+    height: 22px;
+  }
 }
 
 
@@ -54,7 +61,6 @@
 
   @media (min-width: $large-width) {
     display: flex;
-    width: 45%;
   }
 }
 
@@ -70,6 +76,7 @@
 
 .menu__list{
   display: none;
+  padding-inline-start: 0;
   @media (min-width: $large-width) {
     display: flex;
     flex-direction: row;
@@ -82,8 +89,7 @@
 }
 
 .menu__authorization{
-  @include text(20px, normal, 20px, $basic-blue);
-  border-radius: 25px;
+  @include text(20px, bold, 20px, $basic-blue);
 }
 
 .menu__open-icon{
