--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,7 +4,8 @@
 }
 
 .site-list__link{
-  @include text(30px, 500, 35px, #192144);
+  @include text(30px, 500, 35px, $dark-blue);
+  text-transform: uppercase;
 
   @media (min-width: $medium-width) {
     font-size: 60px;
